--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -53,11 +53,11 @@ weight: 50
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷🔄</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷</li>
+<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R">Uygulama - R</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
 </ul></li>
 </ul>
 </div>
