--- a/content/courses/ekonomi-i/2-links-docs.html
+++ b/content/courses/ekonomi-i/2-links-docs.html
@@ -27,11 +27,15 @@ weight: 30
 <h2>Akademi Ekonometri</h2>
 <ul>
 <li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY">Ekonomiye Giriş I - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY">Ekonomiye Giriş I - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔄
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk1pV06IkB0XzLXldjhRfUs">Ekonomiye Giriş I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> <a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇺🇸🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a> <a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇹🇷
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+</ul></li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> <a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a> 🇺🇸🔄
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
@@ -63,6 +67,7 @@ weight: 30
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>Only the first seven weeks are relevant to this course.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn1"><p>Sadece ilk yedi hafta bu dersle ilgilidir.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>Only the first seven weeks are relevant to this course.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
