--- a/content/courses/ekonomi/01-me.html
+++ b/content/courses/ekonomi/01-me.html
@@ -34,8 +34,8 @@ weight: 21
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi/ME/Ekonomi%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</li>
-<li><a href="../../../repo/akek/courses/ekonomi/ME/Ekonomi%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/courses/ekonomi/ME/Ekonomi%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonomi/ME/Ekonomi%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="ders-kitabı" class="section level2">
