--- a/content/courses/ekonomi/2-links-docs.html
+++ b/content/courses/ekonomi/2-links-docs.html
@@ -31,7 +31,7 @@ weight: 30
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸🔄
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
