--- a/content/courses/zaman-serileri-analizi/3-exams-ps.html
+++ b/content/courses/zaman-serileri-analizi/3-exams-ps.html
@@ -35,14 +35,8 @@ weight: 40
 <div id="sınavlar" class="section level2">
 <h2>Sınavlar</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥
-<ul>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Ara%20Sinav%20Ornek%20Sorular%20(Kara).pdf">Ara Sınav - Örnek Sorular</a> 🇹🇷🔥</li>
-</ul></li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥
-<ul>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Final%20Sinavi%20Ornek%20Sorular%20(Kara).pdf">Final Sınavı - Örnek Sorular</a> 🇹🇷🔥</li>
-</ul></li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥</li>
 <li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
 <li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
