--- a/content/courses/zaman-serileri-analizi/01-ec.html
+++ b/content/courses/zaman-serileri-analizi/01-ec.html
@@ -43,14 +43,14 @@ weight: 21
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/zaman-serileri-analizi/EC/Zaman%20Serileri%20Analizi%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
 </tr>
 </tbody>
 </table>
